[package]
name = "async_sync"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Novak <matt@packetandpine.com>"]
license = "MIT"
repository = "https://github.com/packetandpine/async_sync"
description = "A crate for handling asynchronous and synchronous operations seamlessly."

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
log = "0.4.22"
futures = "0.3.31"
async-trait = "0.1.83"
async-std = "1.13.0"
